<resources>
    <string name="app_name">SeeHub</string>
    <string name="detail_app">Detail User</string>
    <string name="menu_option">menu</string>
    <string name="search_hint">Cari</string>
    <string name="username">username</string>
    <string name="id">ID</string>
    <string name="id_init">%1$s - %2$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="follow">follow</string>
    <string name="follow_init">Followers : %1$d     Following : %2$d</string>
    <string name="tab_1_name">Followers</string>
    <string name="tab_2_name">Following</string>
    <string name="name_init">Nama</string>
    <string name="semicolon">:</string>
    <string name="username_init">Username</string>
    <string name="id_initi">ID</string>
    <string name="nodeId_init">Node ID</string>
    <string name="email_init">Email</string>
    <string name="company_init">Company</string>
    <string name="location_init">Location</string>
    <string name="twitter_init">Twitter</string>
    <string name="pub_repo_init">Public Repository</string>
    <string name="pub_gist_init">Public Gist</string>
    <string name="created_init">Created at</string>
    <string name="update_init">Updated at</string>
    <string name="bio">Bio :</string>
    <string name="bio_init">bio ...</string>
    <string name="close">Close</string>
    <string name="null_">null</string>
</resources>